--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An electron app used to communicate with co-workers.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/rahuezo/fetch#readme",
   "dependencies": {
+    "electron": "^2.0.7",
     "materialize-css": "^0.100.2"
   }
 }
